#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æ›´æ–°è¿ç§»æ•°æ®åº“ï¼Œå¯¼å…¥æ‰€æœ‰12ä¸ªæ‰¹æ¬¡çš„å®é™…è¿›åº¦
"""

import sys
sys.path.insert(0, '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/scripts')

from core.migration_tracker import MigrationTracker, Batch, MigrationFile, Issue
from datetime import datetime

def update_all_batches():
    """æ›´æ–°æ‰€æœ‰12ä¸ªæ‰¹æ¬¡çš„å®é™…è¿›åº¦"""
    
    with MigrationTracker() as tracker:
        print("ğŸ”„ æ­£åœ¨æ›´æ–°è¿ç§»è¿›åº¦æ•°æ®åº“...")
        print("=" * 80)
        
        # æ‰¹æ¬¡ä¿¡æ¯ï¼š(åç§°, åºå·, æè¿°, çŠ¶æ€, ä¼˜å…ˆçº§, æ€»æ–‡ä»¶æ•°, å·²è¿ç§»æ•°, å¼€å§‹æ—¥æœŸ, å®Œæˆæ—¥æœŸ)
        batches_info = [
            # å·²å®Œæˆæ‰¹æ¬¡
            ("batch_01", 1, "ç™»å½•è®¤è¯æ¨¡å—", "completed", 10, 5, 5, "2026-02-08", "2026-02-09"),
            ("batch_02", 2, "ä¼šè¯ç®¡ç†æ¨¡å—(PING)", "completed", 9, 1, 1, "2026-02-09", "2026-02-09"),
            ("batch_03", 3, "è§’è‰²åˆ—è¡¨ç®¡ç†", "completed", 9, 2, 2, "2026-02-09", "2026-02-09"),
            ("batch_04", 4, "åˆ›å»ºè§’è‰²/é¢‘é“åˆ—è¡¨/è¿›å…¥é¢‘é“", "completed", 9, 5, 5, "2026-02-09", "2026-02-09"),
            ("batch_05", 5, "å¾…æœº/åˆ é™¤è§’è‰²/å¼€å§‹æ¸¸æˆ/é€€å‡ºè§’è‰²", "completed", 8, 8, 8, "2026-02-09", "2026-02-09"),
            ("batch_06", 6, "è®¤è¯å¯†é’¥åˆ·æ–°/å¹³å°èµ„æ–™æ›´æ–°", "completed", 8, 4, 4, "2026-02-09", "2026-02-09"),
            ("batch_07", 7, "æˆ˜æ–—æœåŠ¡å™¨/IDIPç¦æ­¢/æœåŠ¡å™¨æ•°æ®", "completed", 8, 8, 8, "2026-02-09", "2026-02-09"),
            ("batch_08", 8, "åŸé•‡ç›¸å…³æ¶ˆæ¯(è¿›å…¥/ç¦»å¼€/è§’è‰²ä¿¡æ¯)", "completed", 7, 14, 14, "2026-02-09", "2026-02-09"),
            ("batch_09", 9, "MAILé‚®ä»¶æ¨¡å—", "completed", 7, 12, 12, "2026-02-09", "2026-02-09"),
            
            # è¿›è¡Œä¸­å’Œè®¡åˆ’ä¸­æ‰¹æ¬¡
            ("batch_10", 10, "ç‰©å“ç›¸å…³æ¶ˆæ¯", "in_progress", 8, 12, 0, "2026-02-09", None),
            ("batch_11", 11, "å¾…è§„åˆ’", "pending", 6, 0, 0, None, None),
            ("batch_12", 12, "å¾…è§„åˆ’", "pending", 6, 0, 0, None, None),
        ]
        
        updated_count = 0
        created_count = 0
        
        for batch_name, number, desc, status, priority, total, migrated, start, end in batches_info:
            # æ£€æŸ¥æ‰¹æ¬¡æ˜¯å¦å·²å­˜åœ¨
            existing = tracker.get_batch_by_name(batch_name)
            
            if existing:
                # æ›´æ–°ç°æœ‰æ‰¹æ¬¡
                tracker.update_batch(
                    existing.id,
                    description=desc,
                    status=status,
                    priority=priority,
                    total_files=total,
                    migrated_files=migrated,
                    start_date=start,
                    actual_end_date=end
                )
                updated_count += 1
                print(f"ğŸ“ æ›´æ–°æ‰¹æ¬¡: {batch_name} - {desc} ({status})")
            else:
                # åˆ›å»ºæ–°æ‰¹æ¬¡
                batch = Batch(
                    id=None,
                    batch_name=batch_name,
                    batch_number=number,
                    description=desc,
                    status=status,
                    priority=priority,
                    total_files=total,
                    migrated_files=migrated,
                    start_date=start,
                    planned_end_date=None,
                    actual_end_date=end,
                    blocker=None,
                    notes=None,
                    created_at=None,
                    updated_at=None
                )
                tracker.create_batch(batch)
                created_count += 1
                print(f"âœ… åˆ›å»ºæ‰¹æ¬¡: {batch_name} - {desc} ({status})")
        
        print(f"\næ‰¹æ¬¡æ›´æ–°å®Œæˆ: æ›´æ–° {updated_count} ä¸ª, åˆ›å»º {created_count} ä¸ª")
        
        # æ·»åŠ æ‰¹æ¬¡01çš„æ–‡ä»¶è¯¦æƒ…
        print("\nğŸ“ æ·»åŠ æ‰¹æ¬¡01çš„è¿ç§»æ–‡ä»¶...")
        batch1 = tracker.get_batch_by_name("batch_01")
        if batch1:
            files_01 = [
                ("ChannelInfo.java", "LOGIN", 10000, "completed"),
                ("IntrudeMemberInfo.java", "LOGIN", 10000, "completed"),
                ("IntrudeInfo.java", "LOGIN", 10000, "completed"),
                ("REQ_LOGIN.java", "LOGIN", 10000, "completed"),
                ("RES_LOGIN.java", "LOGIN", 10000, "completed"),
            ]
            for fname, module, mid, status in files_01:
                f = MigrationFile(
                    id=None,
                    batch_id=batch1.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=10,
                    proto_file=f"proto/dnf/v1/auth_login.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡01 - {module}æ¨¡å—",
                    start_date="2026-02-08",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass  # æ–‡ä»¶å¯èƒ½å·²å­˜åœ¨
        
        # æ·»åŠ æ‰¹æ¬¡03çš„æ–‡ä»¶è¯¦æƒ…(CHARACTER)
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡03(CHARACTER)çš„è¿ç§»æ–‡ä»¶...")
        batch3 = tracker.get_batch_by_name("batch_03")
        if batch3:
            files_03 = [
                ("REQ_CHARAC_LIST.java", "CHARACTER", 10002, "completed"),
                ("RES_CHARAC_LIST.java", "CHARACTER", 10002, "completed"),
            ]
            for fname, module, mid, status in files_03:
                f = MigrationFile(
                    id=None,
                    batch_id=batch3.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=9,
                    proto_file=f"proto/dnf/v1/character.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡03 - è§’è‰²åˆ—è¡¨ç®¡ç†",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡04çš„æ–‡ä»¶è¯¦æƒ…
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡04(åˆ›å»ºè§’è‰²/é¢‘é“)çš„è¿ç§»æ–‡ä»¶...")
        batch4 = tracker.get_batch_by_name("batch_04")
        if batch4:
            files_04 = [
                ("REQ_CREATE_CHARACTER.java", "CHARACTER", 10003, "completed"),
                ("RES_CREATE_CHARACTER.java", "CHARACTER", 10003, "completed"),
                ("REQ_CHANNEL_LIST.java", "CHANNEL", 10008, "completed"),
                ("RES_CHANNEL_LIST.java", "CHANNEL", 10008, "completed"),
                ("REQ_ENTER_CHANNEL.java", "CHANNEL", 10011, "completed"),
            ]
            for fname, module, mid, status in files_04:
                f = MigrationFile(
                    id=None,
                    batch_id=batch4.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=9,
                    proto_file=f"proto/dnf/v1/{'character' if 'CHARACTER' in fname else 'channel'}.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡04 - åˆ›å»ºè§’è‰²å’Œé¢‘é“ç®¡ç†",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡05çš„æ–‡ä»¶è¯¦æƒ…
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡05(å¾…æœº/åˆ é™¤è§’è‰²/æ¸¸æˆ)çš„è¿ç§»æ–‡ä»¶...")
        batch5 = tracker.get_batch_by_name("batch_05")
        if batch5:
            files_05 = [
                ("REQ_STANDBY.java", "CHARACTER", 10001, "completed"),
                ("RES_STANDBY.java", "CHARACTER", 10001, "completed"),
                ("REQ_REMOVE_CHARACTER.java", "CHARACTER", 10004, "completed"),
                ("RES_REMOVE_CHARACTER.java", "CHARACTER", 10004, "completed"),
                ("REQ_START_GAME.java", "CHARACTER", 10005, "completed"),
                ("REQ_EXIT_CHARACTER.java", "CHARACTER", 10007, "completed"),
            ]
            for fname, module, mid, status in files_05:
                f = MigrationFile(
                    id=None,
                    batch_id=batch5.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=8,
                    proto_file=f"proto/dnf/v1/character.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡05 - å¾…æœº/åˆ é™¤è§’è‰²/å¼€å§‹æ¸¸æˆ",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡06çš„æ–‡ä»¶è¯¦æƒ…
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡06(è®¤è¯/å¹³å°)çš„è¿ç§»æ–‡ä»¶...")
        batch6 = tracker.get_batch_by_name("batch_06")
        if batch6:
            files_06 = [
                ("REQ_AUTHKEY_REFRESH.java", "AUTH", 10009, "completed"),
                ("RES_AUTHKEY_REFRESH.java", "AUTH", 10009, "completed"),
                ("REQ_PLATFORM_PROFILE_UPDATE.java", "PLATFORM", 10012, "completed"),
                ("RES_PLATFORM_PROFILE_UPDATE.java", "PLATFORM", 10012, "completed"),
            ]
            for fname, module, mid, status in files_06:
                f = MigrationFile(
                    id=None,
                    batch_id=batch6.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=8,
                    proto_file=f"proto/dnf/v1/{module.lower()}.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡06 - è®¤è¯å’Œå¹³å°èµ„æ–™",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡07çš„æ–‡ä»¶è¯¦æƒ…
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡07(æˆ˜æ–—æœåŠ¡å™¨/IDIP/æœåŠ¡å™¨æ•°æ®)çš„è¿ç§»æ–‡ä»¶...")
        batch7 = tracker.get_batch_by_name("batch_07")
        if batch7:
            files_07 = [
                ("REQ_CONNECT_BATTLE_SERVER.java", "BATTLE", 10014, "completed"),
                ("RES_CONNECT_BATTLE_SERVER.java", "BATTLE", 10014, "completed"),
                ("REQ_IDIP_PROHIBIT_LIST.java", "IDIP", 10017, "completed"),
                ("RES_IDIP_PROHIBIT_LIST.java", "IDIP", 10017, "completed"),
                ("REQ_LOAD_SERVER_SIMPLE_DATA.java", "SERVER_DATA", 10031, "completed"),
                ("RES_LOAD_SERVER_SIMPLE_DATA.java", "SERVER_DATA", 10031, "completed"),
                ("REQ_SAVE_SERVER_SIMPLE_DATA.java", "SERVER_DATA", 10032, "completed"),
                ("RES_SAVE_SERVER_SIMPLE_DATA.java", "SERVER_DATA", 10032, "completed"),
            ]
            for fname, module, mid, status in files_07:
                proto_file = "battle.proto" if "BATTLE" in fname else "idip.proto" if "IDIP" in fname else "server_data.proto"
                f = MigrationFile(
                    id=None,
                    batch_id=batch7.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=8,
                    proto_file=f"proto/dnf/v1/{proto_file}",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡07 - æˆ˜æ–—æœåŠ¡å™¨å’ŒæœåŠ¡å™¨æ•°æ®",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡08çš„æ–‡ä»¶è¯¦æƒ…
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡08(åŸé•‡ç›¸å…³)çš„è¿ç§»æ–‡ä»¶...")
        batch8 = tracker.get_batch_by_name("batch_08")
        if batch8:
            files_08 = [
                ("REQ_ENTER_TO_TOWN.java", "TOWN", 10100, "completed"),
                ("RES_ENTER_TO_TOWN.java", "TOWN", 10100, "completed"),
                ("REQ_LEAVE_FROM_TOWN.java", "TOWN", 10109, "completed"),
                ("RES_LEAVE_FROM_TOWN.java", "TOWN", 10109, "completed"),
                ("REQ_CHARACTER_INFO.java", "TOWN", 10103, "completed"),
                ("RES_CHARACTER_INFO.java", "TOWN", 10103, "completed"),
                ("REQ_TOWN_USER_GUID_LIST.java", "TOWN", 10106, "completed"),
                ("RES_TOWN_USER_GUID_LIST.java", "TOWN", 10106, "completed"),
                ("REQ_TARGET_USER_DETAIL_INFO.java", "TOWN", 10107, "completed"),
                ("RES_TARGET_USER_DETAIL_INFO.java", "TOWN", 10107, "completed"),
                ("REQ_INTERACTION_MENU.java", "TOWN", 10108, "completed"),
                ("RES_INTERACTION_MENU.java", "TOWN", 10108, "completed"),
            ]
            for fname, module, mid, status in files_08:
                f = MigrationFile(
                    id=None,
                    batch_id=batch8.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=7,
                    proto_file=f"proto/dnf/v1/town.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡08 - åŸé•‡ç›¸å…³æ¶ˆæ¯",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡09çš„æ–‡ä»¶è¯¦æƒ…
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡09(MAILé‚®ä»¶æ¨¡å—)çš„è¿ç§»æ–‡ä»¶...")
        batch9 = tracker.get_batch_by_name("batch_09")
        if batch9:
            files_09 = [
                ("REQ_MAIL_LIST.java", "MAIL", 15001, "completed"),
                ("RES_MAIL_LIST.java", "MAIL", 15001, "completed"),
                ("REQ_MAIL_GET.java", "MAIL", 15002, "completed"),
                ("RES_MAIL_GET.java", "MAIL", 15002, "completed"),
                ("REQ_MAIL_READ.java", "MAIL", 15003, "completed"),
                ("RES_MAIL_READ.java", "MAIL", 15003, "completed"),
                ("REQ_MAIL_DELETE.java", "MAIL", 15004, "completed"),
                ("RES_MAIL_DELETE.java", "MAIL", 15004, "completed"),
                ("REQ_MAIL_ITEM_ALL_GET.java", "MAIL", 15005, "completed"),
                ("RES_MAIL_ITEM_ALL_GET.java", "MAIL", 15005, "completed"),
                ("REQ_MAIL_ALL_DELETE.java", "MAIL", 15006, "completed"),
                ("RES_MAIL_ALL_DELETE.java", "MAIL", 15006, "completed"),
            ]
            for fname, module, mid, status in files_09:
                f = MigrationFile(
                    id=None,
                    batch_id=batch9.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=7,
                    proto_file=f"proto/dnf/v1/mail.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡09 - MAILé‚®ä»¶æ¨¡å—",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ·»åŠ æ‰¹æ¬¡10çš„æ–‡ä»¶ï¼ˆè®¡åˆ’ä¸­ï¼‰
        print("ğŸ“ æ·»åŠ æ‰¹æ¬¡10(ç‰©å“æ¨¡å—)çš„å¾…è¿ç§»æ–‡ä»¶...")
        batch10 = tracker.get_batch_by_name("batch_10")
        if batch10:
            files_10 = [
                ("REQ_ITEM_USE.java", "ITEM", 14017, "pending"),
                ("RES_ITEM_USE.java", "ITEM", 14017, "pending"),
                ("REQ_ITEM_REINFORCE.java", "ITEM", 14006, "pending"),
                ("RES_ITEM_REINFORCE.java", "ITEM", 14006, "pending"),
                ("REQ_ITEM_LIST.java", "ITEM", 14000, "pending"),
                ("RES_ITEM_LIST.java", "ITEM", 14000, "pending"),
                ("REQ_ITEM_MOVE.java", "ITEM", 14001, "pending"),
                ("RES_ITEM_MOVE.java", "ITEM", 14001, "pending"),
                ("REQ_ITEM_DROP.java", "ITEM", 14002, "pending"),
                ("RES_ITEM_DROP.java", "ITEM", 14002, "pending"),
                ("REQ_ITEM_SPLIT.java", "ITEM", 14003, "pending"),
                ("RES_ITEM_SPLIT.java", "ITEM", 14003, "pending"),
            ]
            for fname, module, mid, status in files_10:
                f = MigrationFile(
                    id=None,
                    batch_id=batch10.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=8,
                    proto_file=None,
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=False,
                    test_passed=False,
                    issues_count=0,
                    migration_notes=f"æ‰¹æ¬¡10 - ç‰©å“æ¨¡å—(è®¡åˆ’ä¸­)",
                    start_date=None,
                    completion_date=None,
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # æ›´æ–°æ‰¹æ¬¡çš„æ–‡ä»¶è®¡æ•°
        print("\nğŸ”„ æ›´æ–°æ‰¹æ¬¡æ–‡ä»¶è®¡æ•°...")
        for batch_name, _, _, _, _, _, _, _, _ in batches_info:
            batch = tracker.get_batch_by_name(batch_name)
            if batch:
                tracker._update_batch_file_count(batch.id)
                tracker._update_batch_migrated_count(batch.id)
        
        print("\n" + "=" * 80)
        print("âœ… æ•°æ®åº“æ›´æ–°å®Œæˆï¼")
        print("\nå½“å‰è¿›åº¦æ¦‚è§ˆ:")
        
        # æ˜¾ç¤ºæœ€æ–°è¿›åº¦
        progress = tracker.get_overall_progress()
        print(f"  æ‰¹æ¬¡: {progress['batches']['completed']}/{progress['batches']['total']} å®Œæˆ")
        print(f"  æ–‡ä»¶: {progress['files']['migrated']}/{progress['files']['total']} å®Œæˆ")
        print(f"  è¿›åº¦: {progress['files']['progress_percent']}%")
        
        # æŒ‰æ¨¡å—ç»Ÿè®¡
        print("\næŒ‰æ¨¡å—ç»Ÿè®¡:")
        modules = tracker.get_module_progress()
        for m in modules[:10]:  # åªæ˜¾ç¤ºå‰10ä¸ª
            print(f"  {m['module_name']:<15}: {m['completed_files']:>3}/{m['total_files']:>3} ({m['progress_percent']:>5.1f}%)")

if __name__ == '__main__':
    update_all_batches()
